Model Mapper / Recursion of Back-end and management of Entity relationship